[package]
name = "canvas-fuse"
version = "0.1.0"
description = "Canvas context FUSE mount — materializes context views as folders"
edition = "2021"

[lib]
name = "canvas_fuse"
path = "src/lib.rs"

[[bin]]
name = "canvas-fuse"
path = "src/main.rs"

[dependencies]
# default-features off: skip libfuse linkage, mount via fusermount3 directly
fuser = { version = "0.15", default-features = false, features = ["abi-7-31"] }
libc = "0.2"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rust_socketio = "0.6"
redb = "2"
clap = { version = "4", features = ["derive", "env"] }
parking_lot = "0.12"
log = "0.4"
env_logger = "0.11"
chrono = "0.4"
ctrlc = { version = "3", features = ["termination"] }
anyhow = "1"
dirs = "5"

[dev-dependencies]
tempfile = "3.27.0"
